<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.mercijack.stockmateriel.presentation.home.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.home.HomeFragment">

        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/dp_16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/mtv_title"
                    style="@style/TextBlackBold24"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp_8"
                    android:text="Mon stock" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/mtv_number_materiels"
                    style="@style/TextBlack14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp_16"
                    app:number_materiels="@{viewModel.numberMateriels}"
                    tools:text="10 matériels" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_16"
                    android:background="@drawable/blue_border"
                    android:padding="1dp"
                    android:visibility="@{viewModel.numberMateriels == 0 ? View.GONE : View.VISIBLE }"
                    app:backgroundTint="@color/teal_700">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_view_stock"
                        style="@style/TextBlackBold20"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/blue_border"
                        android:onClick="@{() -> viewModel.onBtnViewListClicked()}"
                        android:paddingStart="@dimen/dp_36"
                        android:paddingEnd="@dimen/dp_36"
                        android:text="Voir le stock"
                        android:textAllCaps="false"
                        app:backgroundTint="@color/white" />

                </RelativeLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_add"
                    style="@style/TextWhiteBold20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_16"
                    android:background="@drawable/bacground_rounded_blue_green"
                    android:onClick="@{() -> viewModel.onBtnAddClicked()}"
                    android:paddingStart="@dimen/dp_36"
                    android:paddingEnd="@dimen/dp_36"
                    android:text="Ajouter un matériel"
                    android:textAllCaps="false"
                    app:backgroundTint="@color/teal_700" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_16"
                    android:background="@drawable/blue_border"
                    android:padding="1dp"
                    android:visibility="@{viewModel.numberMateriels == 0 ? View.GONE : View.VISIBLE }"
                    app:backgroundTint="@color/teal_700">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_remove"
                        style="@style/TextBlackBold20"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/blue_border"
                        android:onClick="@{() -> viewModel.onBtnViewListClicked()}"
                        android:paddingStart="@dimen/dp_36"
                        android:paddingEnd="@dimen/dp_36"
                        android:text="Retirer un matériel"
                        android:textAllCaps="false"
                        app:backgroundTint="@color/white" />

                </RelativeLayout>

            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>


