<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/HomeFragment">

    <fragment
        android:id="@+id/HomeFragment"
        android:name="com.mercijack.stockmateriel.presentation.home.HomeFragment"
        android:label="HomeFragment"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_Home_to_Notifications"
            app:destination="@id/NotificationsFragment" />

        <action
            android:id="@+id/action_Home_to_MaterielsList"
            app:destination="@id/ItemsCollectionFragment" />

        <action
            android:id="@+id/action_Home_to_AddMateriel"
            app:destination="@id/AddMaterielFragment" />
    </fragment>

    <fragment
        android:id="@+id/NotificationsFragment"
        android:name="com.mercijack.stockmateriel.presentation.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <action
        android:id="@+id/action_to_Notifications"
        app:destination="@id/NotificationsFragment" />

    <action
        android:id="@+id/action_to_Home"
        app:destination="@id/HomeFragment" />

    <fragment
        android:id="@+id/ItemsCollectionFragment"
        android:name="com.mercijack.stockmateriel.presentation.listmateriels.MaterielsListFragment"
        android:label="ItemsCollectionFragment"
        tools:layout="@layout/fragment_materiels_list" />

    <fragment
        android:id="@+id/AddMaterielFragment"
        android:name="com.mercijack.stockmateriel.presentation.addmateriel.AddMaterielFragment"
        android:label="AddMaterielFragment"
        tools:layout="@layout/fragment_add_materiel" />

</navigation>